--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   sqflite:
+  background_fetch:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
